[project]
name = "chronicle-shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "nilsfast", email = "mail@nilsfast.com" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
chronicle-shared = "chronicle_shared:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
